# VTS

./: .gitignore  LICENSE  README.md
infer/: example_inference.py  inference.py  pyproject.toml  trajectory.py  vlm_interface.py
infer/utils/: dataset.py  eval.py  keyframe_sampling.py  segmentation.py  temporal.py  tree_cache.py  vis.py
rl/: grpo_all60.sh  rollout.sh  video_crop_plugin.py
rl/data_scripts/: cgbench_rl.py  lvhaystack_ego4d_rl.py  youtube_rl.py
rl/scripts/: convert_checkpoint.py
rl/utils/: prompt_utils.py  tree_utils.py
sft/: fsdp_config.yaml  sft_qwen2.5.yaml  sft_qwen3.yaml  train.slurm
sft/data/: dataset_info.json
